[package]
name = "mirrorfs"
version = "0.3.1"
authors = ["Pascalio"]

[features]
enable_unsecure_features = []

[dependencies]
fuse = "0.3"
libc = "0.2.17"
nix = "*"
time = "0.1"
multimap = "0.3.0"
slog = { version = "1.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-scope = "0.2.2"
slog-term = "1.3.4"
utime = "*"
syscall = "0.2.1"
capabilities = "0.2.0"
users = "0.5.2"
fnv = "*"

[dependencies.clap]
version = "2"
default-features = false
features = [ "suggestions", "yaml" ]
